--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.4 【今日阅读】https://josephg.com/blog/crdts-go-brrr/ 5000x faster CRDTs: An Adventure in Optimization
+
 7.3 【今日阅读】https://marijnhaverbeke.nl/blog/facets.html This post tries to explain CodeMirror's (a code editor library) approach to solving extension problem
 
 7.2 【今日阅读】http://axisofeval.blogspot.com/2011/04/whats-condition-system-and-why-do-you.html What's a condition system and why do you want one?
