--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.5 【今日阅读】https://github.com/redwood/redwood Redwood is a highly-configurable, distributed, realtime database that manages a state tree shared among many peers. Redwood is also an application server. Developers can store and update assets (HTML, Javascript, images) directly in the state tree. For many types of applications, you may not need a separate backend server at all.
+
 7.4 【今日阅读】https://josephg.com/blog/crdts-go-brrr/ 5000x faster CRDTs: An Adventure in Optimization
 
 7.3 【今日阅读】https://marijnhaverbeke.nl/blog/facets.html This post tries to explain CodeMirror's (a code editor library) approach to solving extension problem
