--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.7 【今日阅读】https://josephg.com/blog/3-tribes/ You are a poet and a mathematician. Programming is your poetry; You are a hacker. You make hardware dance to your tune; You are a maker. You build things for people to use
+
 7.6 【今日阅读】https://lobste.rs/s/5ozh2p/write_code_like_you_just_learned_how It’s extremely difficult to be simultaneously concerned with the end-user experience of whatever it is that you’re building and the architecture of the program that delivers that experience. I think the only way to pull it off is to simply not care about the latter.
 
 7.5 【今日阅读】https://github.com/redwood/redwood Redwood is a highly-configurable, distributed, realtime database that manages a state tree shared among many peers. Redwood is also an application server. Developers can store and update assets (HTML, Javascript, images) directly in the state tree. For many types of applications, you may not need a separate backend server at all.
