--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,11 @@
+7.8 【今日阅读】https://www.baldurbjarnason.com/2022/more-better-web-apps/ 
+
+* They are describing how things are done where they work and assume that if you’re describing something different you must be describing it wrong or not following your place of employment’s best practices.
+* They are describing how they’d prefer to work and are assuming that your different take means that you think that they’re making a big mistake.
+* They are educators teaching a specific approach to solving a specific problem. They’re aware that there are often many different solutions to each problem but are describing the one they teach. They also are probably assuming that you think they’re teaching the wrong approach for bad reasons.
+* They are testing out different approaches and weighing the pros and cons of each, with data. They’re assuming that you can’t make good decisions in a vacuum. Which is a good assumption, admittedly.
+* They are concerned about the long-term sustainability of the field. They keep encountering highly flawed websites or web apps and are assuming that regular web devs can do something about it.
+
 7.7 【今日阅读】https://josephg.com/blog/3-tribes/ You are a poet and a mathematician. Programming is your poetry; You are a hacker. You make hardware dance to your tune; You are a maker. You build things for people to use
 
 7.6 【今日阅读】https://lobste.rs/s/5ozh2p/write_code_like_you_just_learned_how It’s extremely difficult to be simultaneously concerned with the end-user experience of whatever it is that you’re building and the architecture of the program that delivers that experience. I think the only way to pull it off is to simply not care about the latter.
