--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.9 【今日阅读】https://gbracha.blogspot.com/2022/06/the-prospect-of-execution-hidden.html You can literally reuse your object serializer as a deployment format. Serializing data and serializing code are one and the same.
+
 7.8 【今日阅读】https://www.baldurbjarnason.com/2022/more-better-web-apps/ 
 
 * They are describing how things are done where they work and assume that if you’re describing something different you must be describing it wrong or not following your place of employment’s best practices.
