--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.10 【今日阅读】https://gordonc.bearblog.dev/dry-most-over-rated-programming-principle/ 1. DRY is misused to eliminate coincidental repetition 2. DRY creates a presumption of reusability 3. DRY is a gateway drug to unnecessary complexity
+
 7.9 【今日阅读】https://gbracha.blogspot.com/2022/06/the-prospect-of-execution-hidden.html You can literally reuse your object serializer as a deployment format. Serializing data and serializing code are one and the same.
 
 7.8 【今日阅读】https://www.baldurbjarnason.com/2022/more-better-web-apps/ 
