--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.13 【今日阅读】https://zhuanlan.zhihu.com/p/266510840 用Airbnb一位朋友的话来说：大家都在浪费很多时间研究build怎么写，出了问题也不知道怎么调。经常升级个版本就build break了；monorepo里跑个bazel build 就可以泡杯咖啡扯个蛋；尽管如此，Bazel仍然是当前开源Build System里最先进也最代表着未来方向的产品
+
 7.11 【今日阅读】https://www.ncameron.org/blog/complexity/ complexity affects users by increasing cognitive load. That cognitive load might mean more things to keep in our working memory, which could be due to breadth (e.g., more variables in a function, more branches in a conditional, or more possible implementations of an interface) or depth (e.g, to understand some function call we have to read its implementation, and functions it calls).
 
 7.10 【今日阅读】https://gordonc.bearblog.dev/dry-most-over-rated-programming-principle/ 1. DRY is misused to eliminate coincidental repetition 2. DRY creates a presumption of reusability 3. DRY is a gateway drug to unnecessary complexity
