--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.14 【今日阅读】https://news.ycombinator.com/item?id=13594794 One common anti-pattern is that "event driven" can lead to a push architecture that works on paper, but is unreliable in practice. Then you rewrite from a push based system to a pull based system, and all of your complex edge cases disappear.
+
 7.13 【今日阅读】https://zhuanlan.zhihu.com/p/266510840 用Airbnb一位朋友的话来说：大家都在浪费很多时间研究build怎么写，出了问题也不知道怎么调。经常升级个版本就build break了；monorepo里跑个bazel build 就可以泡杯咖啡扯个蛋；尽管如此，Bazel仍然是当前开源Build System里最先进也最代表着未来方向的产品
 
 7.11 【今日阅读】https://www.ncameron.org/blog/complexity/ complexity affects users by increasing cognitive load. That cognitive load might mean more things to keep in our working memory, which could be due to breadth (e.g., more variables in a function, more branches in a conditional, or more possible implementations of an interface) or depth (e.g, to understand some function call we have to read its implementation, and functions it calls).
