--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.16 【今日阅读】https://github.com/Re-engineering-Domain-Driven-Design/Accounting/blob/main/README.zh-cn.md Transaction的不同生命周期，可能极度违反直觉。因为从业务概念上讲，Account应该聚合Transaction才对。这种业务上的聚合关系，我们通过URI来表示。 也就是对于Transaction而言，它的URI是/customers/{cid}/accounts/{aid}/transactions/{tid}。 而不是/customers/{cid}/source-evidences/{sid}/transactions/{tid}。 将业务聚合与生命周期混为一谈，是领域驱动设计的顽疾。
+
 7.15 【今日阅读】https://dragly.org/2017/03/31/uniform-call-syntax/ Uniform call syntax in C++ today 把行为从类定义里面抽出来
 
 7.14 【今日阅读】https://news.ycombinator.com/item?id=13594794 One common anti-pattern is that "event driven" can lead to a push architecture that works on paper, but is unreliable in practice. Then you rewrite from a push based system to a pull based system, and all of your complex edge cases disappear.
