--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.17 【今日阅读】https://inqlab.net/2022-07-01-geopub-a-multi-model-database.html how a database can support efficient graph, geo-spatial and full-text search queries at the same time - a multi-modal database. This is an important step towards search and discovery of local knowledge.
+
 7.16 【今日阅读】https://github.com/Re-engineering-Domain-Driven-Design/Accounting/blob/main/README.zh-cn.md Transaction的不同生命周期，可能极度违反直觉。因为从业务概念上讲，Account应该聚合Transaction才对。这种业务上的聚合关系，我们通过URI来表示。 也就是对于Transaction而言，它的URI是/customers/{cid}/accounts/{aid}/transactions/{tid}。 而不是/customers/{cid}/source-evidences/{sid}/transactions/{tid}。 将业务聚合与生命周期混为一谈，是领域驱动设计的顽疾。
 
 7.15 【今日阅读】https://dragly.org/2017/03/31/uniform-call-syntax/ Uniform call syntax in C++ today 把行为从类定义里面抽出来
