--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.19 【今日阅读】https://sluongng.hashnode.dev/bazel-caching-explained-pt-2-bazel-in-memory-cache In my experience, between the 3 caching layers of Bazel, In-Memory Cache is the easiest one to miss. It's not common for CI Service Providers to be offering an in-memory caching system, especially when local disk cache and / or remote cache could already speed your CI Pipelines in the open source ecosystem down to merely a minute. Therefore, engineers don't often think that they need in-memory cache in CI, just because most existing solutions in the wild don't offer one. However, in the enterprise monorepo context, in-memory cache sometimes is the only way to keep things reasonable. It is applied everywhere: in production services, in Data / ML Pipelines, etc... and now, CI builds.
+
 7.18 【今日阅读】https://engineering.q42.nl/android-server-driven-ui/ Android Server Driven UI: How we were able to build a native Android app in record time as well as iOS and Web applications, by sharing business logic and UI components.
 
 7.17 【今日阅读】https://inqlab.net/2022-07-01-geopub-a-multi-model-database.html how a database can support efficient graph, geo-spatial and full-text search queries at the same time - a multi-modal database. This is an important step towards search and discovery of local knowledge.
