--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.22 【今日阅读】https://htmx.org/essays/spa-alternative/ It is particularly difficult to do in the technology world , where the being left behind technically is not only a threat to our ego, but also to our employment. "No One Ever Got Fired For Using React" is today's "No One Ever Got Fired For Buying IBM" That's a reality that we must accept, even if we feel that React/etc.
+
 7.21 【今日阅读】https://news.ycombinator.com/item?id=25867693 Why isn't differential dataflow more popular?
 
 7.20 【今日阅读】https://brandur.org/soft-deletion Instead of keeping deleted data in the same tables from which it was deleted from, there can be a new relation specifically for storing all deleted data, and with a flexible jsonb column so that it can capture the properties of any other table
