--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+7.25 【今日阅读】https://embeddedartistry.com/blog/2020/03/02/why-we-estimate/ First: we are creatures that live in a world dominated by Time. None of us can stop, slow, or reverse the unyielding march of Time. Second: we do not operate in the world alone. Estimates are one tool that we use to facilitate coordination and cooperation.
+
+7.23 【今日阅读】https://www.sqlite.org/testing.html How SQLite Is Tested
+
 7.22 【今日阅读】https://htmx.org/essays/spa-alternative/ It is particularly difficult to do in the technology world , where the being left behind technically is not only a threat to our ego, but also to our employment. "No One Ever Got Fired For Using React" is today's "No One Ever Got Fired For Buying IBM" That's a reality that we must accept, even if we feel that React/etc.
 
 7.21 【今日阅读】https://news.ycombinator.com/item?id=25867693 Why isn't differential dataflow more popular?
