--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+7.26 【今日阅读】https://gigamonkeys.com/flowers/ There is one caveat to all this, however. In order for engineering effectiveness engineers to be able to boost effectiveness across all of engineering, things need to be standardized. As we just saw, the big investments in engineering effectiveness work only starts to pay off when you are doing the work for lots of engineers.
+
 7.25 【今日阅读】https://embeddedartistry.com/blog/2020/03/02/why-we-estimate/ First: we are creatures that live in a world dominated by Time. None of us can stop, slow, or reverse the unyielding march of Time. Second: we do not operate in the world alone. Estimates are one tool that we use to facilitate coordination and cooperation.
 
 7.23 【今日阅读】https://www.sqlite.org/testing.html How SQLite Is Tested
