--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+7.28 【今日阅读】https://lewissbaker.github.io/2017/11/17/understanding-operator-co-await If you think about it, the coroutine frame acts as a kind of really high-performance arena memory allocator. The compiler figures out at compile time the total arena size it needs for all local variables and is then able to allocate this memory out to local variables as required with zero overhead! Try beating that with a custom allocator ;)
+
+7.27 【今日阅读】https://webdevelopmenthistory.com/1993-cgi-scripts-and-early-server-side-web-programming/ But another theme of web development is that things don’t stay still for long! 1994 saw the emergence of a new scripting language that was based on CGI: PHP, which initially stood for “Personal Home Page Tools.” Over time, PHP became a replacement for Perl CGI scripts in many cases. I’ll delve into that story in the next post in this series about server-side web development.
+
 7.26 【今日阅读】https://gigamonkeys.com/flowers/ There is one caveat to all this, however. In order for engineering effectiveness engineers to be able to boost effectiveness across all of engineering, things need to be standardized. As we just saw, the big investments in engineering effectiveness work only starts to pay off when you are doing the work for lots of engineers.
 
 7.25 【今日阅读】https://embeddedartistry.com/blog/2020/03/02/why-we-estimate/ First: we are creatures that live in a world dominated by Time. None of us can stop, slow, or reverse the unyielding march of Time. Second: we do not operate in the world alone. Estimates are one tool that we use to facilitate coordination and cooperation.
