--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.1 【今日阅读】https://github.com/remesh-js/remesh A DDD framework for large and complex TypeScript/JavaScript applications
+
 7.31 【今日阅读】https://itnext.io/you-dont-need-microservices-2ad8508b9e27 The monolith should remain the default choice for new, small, and medium-sized engineering teams. Microservices are still an option, but you should have compelling context-specific reasons to justify their use.
 
 7.30 【今日阅读】https://tipi.build/documentation/02-dependencies/ Tipi enables comfortable consumption of dependencies from multiple source like GitHub.com repositories or CMake Hunter provided packages.
