--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.2 【今日阅读】https://news.ycombinator.com/item?id=32317441 At about 40 I shaved my epic beard, took graduation dates off my resume and limited it to about the last 10 years of work. Fresh shave and haircut for any f2f interview. So far so good.
+
 8.1 【今日阅读】https://github.com/remesh-js/remesh A DDD framework for large and complex TypeScript/JavaScript applications
 
 7.31 【今日阅读】https://itnext.io/you-dont-need-microservices-2ad8508b9e27 The monolith should remain the default choice for new, small, and medium-sized engineering teams. Microservices are still an option, but you should have compelling context-specific reasons to justify their use.
