--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,12 @@
+8.3 【今日阅读】https://github.com/SanderMertens/flecs/blob/d6b98939f14513e716e397a0f8a468057530554c/docs/Quickstart.md Something is called an ECS when it:
+Has entities that uniquely identify objects in a game
+
+Has components which are datatypes that can be added to entities
+
+Has systems which are functions that run for all entities matching a component query
+
+For example, a game has a Move system that has a query with two components, Position, Velocity. When the system is ran it is dynamically matched with all entities that have at least these two components.
+
 8.2 【今日阅读】https://news.ycombinator.com/item?id=32317441 At about 40 I shaved my epic beard, took graduation dates off my resume and limited it to about the last 10 years of work. Fresh shave and haircut for any f2f interview. So far so good.
 
 8.1 【今日阅读】https://github.com/remesh-js/remesh A DDD framework for large and complex TypeScript/JavaScript applications
