--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.7 【今日阅读】https://www.47deg.com/blog/why-types/ Making implicits explicit, Dependencies between values, Two-and-a-half flavors, Proving stuff to the compiler
+
 8.6 【今日阅读】https://thenumb.at/Autodiff/ In computer graphics, differentiable rendering, differentiable physics, and neural representations are all poised to be important tools going forward.
 
 8.5 【今日阅读】https://embeddeduse.com/2022/08/03/applying-tdd-to-hal-drivers-with-memory-mapped-i-o/ A client recently asked me to help them get a legacy HAL driver under test. They want to use TDD to maintain and extend the driver. We ran into a couple of problems, because the tests run on a 64-bit computer, whereas the production code runs on a 32-bit microcontroller. I’ll explain the problems and how to solve them.
