--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.8 【今日阅读】https://buttondown.email/j2kun/archive/monorepos-and-forced-migrations/ But even if you balk at the line I drew between monorepos and Cloud adoption, the question still stands why mandated migrations are so common at Google. Why can’t Google just support things and maintain backwards compatibility?
+
 8.7 【今日阅读】https://www.47deg.com/blog/why-types/ Making implicits explicit, Dependencies between values, Two-and-a-half flavors, Proving stuff to the compiler
 
 8.6 【今日阅读】https://thenumb.at/Autodiff/ In computer graphics, differentiable rendering, differentiable physics, and neural representations are all poised to be important tools going forward.
