--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.11 【今日阅读】https://blog.alexgilleran.com/test-against-what-wont-change/ This approach is pretty close to writing "mostly integration" tests, or Kent C. Dodds' Test Trophy, but rather than trying to define "integration" or "unit", my preference is to focus on core principles: you should only have to change your tests when you change what your system does, not how it does it, and the easiest way to make that happen is to write them against the interfaces that your system presents to either other systems or to the user.
+
 8.10 【今日阅读】https://www.alexedwards.net/blog/the-fat-service-pattern In this post I'd like to talk about one of my favorite architectural patterns for building web applications and APIs in Go. It's kind of a mix between the service object and fat model patterns — so I mentally refer to it as the 'fat service' pattern
 
 8.9 【今日阅读】https://www.ralfj.de/blog/2022/08/08/minirust.html The purpose of MiniRust is to describe the semantics of an interesting fragment of Rust in a way that is both precise and understandable to as many people as possible. These goals are somewhat at odds with each other – the most precise definitions, e.g. carried out in the Coq Proof Assistant, tend to not be very accessible. English language, on the other hand, is not very precise. So my compromise solution is to write down the semantics in a format that is hopefully known to everyone who could be interested: in Rust code.
