--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.12 【今日阅读】https://buildingblock.ai/cpp20-modules-bazel How to Use C++20 Modules with Bazel and Clang
+
 8.11 【今日阅读】https://blog.alexgilleran.com/test-against-what-wont-change/ This approach is pretty close to writing "mostly integration" tests, or Kent C. Dodds' Test Trophy, but rather than trying to define "integration" or "unit", my preference is to focus on core principles: you should only have to change your tests when you change what your system does, not how it does it, and the easiest way to make that happen is to write them against the interfaces that your system presents to either other systems or to the user.
 
 8.10 【今日阅读】https://www.alexedwards.net/blog/the-fat-service-pattern In this post I'd like to talk about one of my favorite architectural patterns for building web applications and APIs in Go. It's kind of a mix between the service object and fat model patterns — so I mentally refer to it as the 'fat service' pattern
