--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.14 【今日阅读】https://github.com/rochus-keller/BUSY/blob/main/README.md Compared to other build systems like CMake, QMake, Meson or GN, BUSY is characterized by a statically typed build specification language, and by the possibility to build a project directly from scratch without any further requirements to the host system; BUSY is so lean that it is even suited to be directly integrated with the source tree of a project.
+
 8.13 【今日阅读】https://massimo-nazaria.github.io/blog/2022/02/10/avoid-spaghetti-code-with-scope-minimization.html how to prevent the phenomenon of spaghetti code just by minimizing the visibility of variables
 
 8.12 【今日阅读】https://buildingblock.ai/cpp20-modules-bazel How to Use C++20 Modules with Bazel and Clang
