--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.18 【今日阅读】https://neon.tech/ Neon allows to instantly branch your Postgres database to support a modern development workflow. You can create a branch for your test environments for every code deployment in your CI/CD pipeline.
+
 8.17 【今日阅读】https://www.youtube.com/watch?v=mkkaAWNE-Ig Exceptions the Other Way Round - Sean Parent
 
 8.16 【今日阅读】https://oooops.dev/2021/07/30/surviving-continuous-deployment-in-distributed-systems/ as each change we make now goes immediately to production, it has the potential to affect a complex web of services. These services depend on each other in often intricate ways, and service interdependencies are among the hardest things to test. One mistake in a commit which our pipelines don’t catch, and production goes down. Or data is corrupted.
