--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.19 【今日阅读】https://mp.weixin.qq.com/s/8vls4RqGn2ebySyDYpPIwQ 大量异步事件导致系统难以维护，系统存在数据不一致性以及莫名其妙的性能问题
+
 8.18 【今日阅读】https://neon.tech/ Neon allows to instantly branch your Postgres database to support a modern development workflow. You can create a branch for your test environments for every code deployment in your CI/CD pipeline.
 
 8.17 【今日阅读】https://www.youtube.com/watch?v=mkkaAWNE-Ig Exceptions the Other Way Round - Sean Parent
