--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.21 【今日阅读】https://zdimension.fr/how-i-learned-to-stop-worrying-and-love-macros/ Rust supports two kinds of macros: declarative macros and procedural macros.
+
 8.20 【今日阅读】https://github.com/python/cpython/pull/95908 From CPython 3.12, the official build configuration now supports using LLVM-BOLT as the post-link binary optimizer. It shows that 1-5% performance improvement from pyperformance benchmark.
 
 8.19 【今日阅读】https://mp.weixin.qq.com/s/8vls4RqGn2ebySyDYpPIwQ 大量异步事件导致系统难以维护，系统存在数据不一致性以及莫名其妙的性能问题
