--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.22 【今日阅读】https://docs.gitlab.com/ee/user/application_security/coverage_fuzzing/ Coverage-guided fuzz testing sends random inputs to an instrumented version of your application in an effort to cause unexpected behavior. Such behavior indicates a bug that you should address. GitLab allows you to add coverage-guided fuzz testing to your pipelines. This helps you discover bugs and potential security issues that other QA processes may miss.
+
 8.21 【今日阅读】https://zdimension.fr/how-i-learned-to-stop-worrying-and-love-macros/ Rust supports two kinds of macros: declarative macros and procedural macros.
 
 8.20 【今日阅读】https://github.com/python/cpython/pull/95908 From CPython 3.12, the official build configuration now supports using LLVM-BOLT as the post-link binary optimizer. It shows that 1-5% performance improvement from pyperformance benchmark.
