--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.23 【今日阅读】https://zhuanlan.zhihu.com/p/555275693 网上有个段子，说建筑工程师不会轻易答应会给摩天大楼增加一个地下室，但代码开发工程师却经常在干这样的事，并且总有人会对你说“这个需求很简单”。
+
 8.22 【今日阅读】https://docs.gitlab.com/ee/user/application_security/coverage_fuzzing/ Coverage-guided fuzz testing sends random inputs to an instrumented version of your application in an effort to cause unexpected behavior. Such behavior indicates a bug that you should address. GitLab allows you to add coverage-guided fuzz testing to your pipelines. This helps you discover bugs and potential security issues that other QA processes may miss.
 
 8.21 【今日阅读】https://zdimension.fr/how-i-learned-to-stop-worrying-and-love-macros/ Rust supports two kinds of macros: declarative macros and procedural macros.
