--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+8.25 【今日阅读】https://zhuanlan.zhihu.com/p/387269513 https://zhuanlan.zhihu.com/p/394102530 摆在面前的一条路是DSA，一条路是SIMT，这是一个非常困难的选择。SIMT是NVidia已经趟过的老路，成熟可靠，但后劲不足，而且选择这条路意味着AI芯片最终收敛为GPU，GPU的所有天花板也能一眼望到头。DSA是目前看来arch未来的演进之路，但仍然处于探路的过程中，也依然有机会成为CPU和GPU之外的第三种独立的架构存在于历史长河中。
+
+【今日阅读】https://mp.weixin.qq.com/s/lJAbzU43RJU-YLFMfiM__w 该平台前后已经历四五家供应商历时七八年的不断修改，可维护性极差。在进行升级改造的同时，我们更“有幸”直接承担了该系统的各项线上运维工作，真真切切体验了陷入“软件泥潭”的感受。
+
 8.23 【今日阅读】https://zhuanlan.zhihu.com/p/555275693 网上有个段子，说建筑工程师不会轻易答应会给摩天大楼增加一个地下室，但代码开发工程师却经常在干这样的事，并且总有人会对你说“这个需求很简单”。
 
 8.22 【今日阅读】https://docs.gitlab.com/ee/user/application_security/coverage_fuzzing/ Coverage-guided fuzz testing sends random inputs to an instrumented version of your application in an effort to cause unexpected behavior. Such behavior indicates a bug that you should address. GitLab allows you to add coverage-guided fuzz testing to your pipelines. This helps you discover bugs and potential security issues that other QA processes may miss.
