--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,8 +1,10 @@
+8.27 【今日阅读】https://cs-syd.eu/posts/2022-08-22-how-to-deal-with-money-in-software Dealing with money in software is difficult and dangerous. This post contains an overview of the problems you will run into eventually when writing software that deals with money. It describes potential representations, relevant trade-offs, and recommends ways of correctly implementing common operations.
+
 8.26 【今日阅读】https://lobste.rs/s/ezaucv/stop_saying_10x_developer The thing that so many “10x” type memes miss is that growth and seniority are increasingly less about the code you write and more about the impact you have on colleagues.
 
 8.25 【今日阅读】https://zhuanlan.zhihu.com/p/387269513 https://zhuanlan.zhihu.com/p/394102530 摆在面前的一条路是DSA，一条路是SIMT，这是一个非常困难的选择。SIMT是NVidia已经趟过的老路，成熟可靠，但后劲不足，而且选择这条路意味着AI芯片最终收敛为GPU，GPU的所有天花板也能一眼望到头。DSA是目前看来arch未来的演进之路，但仍然处于探路的过程中，也依然有机会成为CPU和GPU之外的第三种独立的架构存在于历史长河中。
 
-【今日阅读】https://mp.weixin.qq.com/s/lJAbzU43RJU-YLFMfiM__w 该平台前后已经历四五家供应商历时七八年的不断修改，可维护性极差。在进行升级改造的同时，我们更“有幸”直接承担了该系统的各项线上运维工作，真真切切体验了陷入“软件泥潭”的感受。
+8.24【今日阅读】https://mp.weixin.qq.com/s/lJAbzU43RJU-YLFMfiM__w 该平台前后已经历四五家供应商历时七八年的不断修改，可维护性极差。在进行升级改造的同时，我们更“有幸”直接承担了该系统的各项线上运维工作，真真切切体验了陷入“软件泥潭”的感受。
 
 8.23 【今日阅读】https://zhuanlan.zhihu.com/p/555275693 网上有个段子，说建筑工程师不会轻易答应会给摩天大楼增加一个地下室，但代码开发工程师却经常在干这样的事，并且总有人会对你说“这个需求很简单”。
 
