--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.28 【今日阅读】https://github.com/stebunovd/blog/blob/master/contents/On-Estimates.md Ok, so estimates take their toll. They can be misleading, they can slow a team down and make developers uncomfortable, but we need them for project planning anyway, right? Well, not necessarily. Sometimes estimates are unavoidable, but in most cases, they are not required for project decisions.
+
 8.27 【今日阅读】https://cs-syd.eu/posts/2022-08-22-how-to-deal-with-money-in-software Dealing with money in software is difficult and dangerous. This post contains an overview of the problems you will run into eventually when writing software that deals with money. It describes potential representations, relevant trade-offs, and recommends ways of correctly implementing common operations.
 
 8.26 【今日阅读】https://lobste.rs/s/ezaucv/stop_saying_10x_developer The thing that so many “10x” type memes miss is that growth and seniority are increasingly less about the code you write and more about the impact you have on colleagues.
