--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+8.30 【今日阅读】https://calebhearth.com/fan-out-vs-fan-in Design Your Codebase with Low Fan-out, High Fan-in Classes
+
 8.29 【今日阅读】https://kevin.burke.dev/kevin/reddits-database-has-two-tables/ Reddit’s database has two tables
 
 8.28 【今日阅读】https://github.com/stebunovd/blog/blob/master/contents/On-Estimates.md Ok, so estimates take their toll. They can be misleading, they can slow a team down and make developers uncomfortable, but we need them for project planning anyway, right? Well, not necessarily. Sometimes estimates are unavoidable, but in most cases, they are not required for project decisions.
