--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.1 【今日阅读】https://www.foonathan.net/2022/08/malloc-interface/ A good API requests all information it needs (duh) and returns as much information it can provide (law of useful return). malloc() and free() don’t follow those principles, which make them less useful as they could be.
+
 8.31 【今日阅读】https://msrc-blog.microsoft.com/2022/01/20/an_armful_of_cheris/ CHERI changes this. Every load or store instruction and every instruction fetch must be authorized by an architectural capability. Load and store instructions take a capability as the base instead of an integer address. The capability both identifies an address and grants access to a range of memory (including permissions, such as read, write, or execute).
 
 8.30 【今日阅读】https://calebhearth.com/fan-out-vs-fan-in Design Your Codebase with Low Fan-out, High Fan-in Classes
