--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,11 @@
+9.3 【今日阅读】https://betterprogramming.pub/kubernetes-was-never-designed-for-batch-jobs-f59be376a338 Kubernetes is not a mere orchestration system. In fact, it eliminates the need for orchestration. The technical definition of orchestration is execution of a defined workflow: first do A, then B, then C. In contrast, Kubernetes comprises a set of independent, composable control processes that continuously drive the current state towards the provided desired state. It shouldn’t matter how you get from A to C. Centralized control is also not required. This results in a system that is easier to use and more powerful, robust, resilient, and extensible.
+
+9.2 【今日阅读】https://mp.weixin.qq.com/s/KaTdLkMT8ko2GE3ROuPuRQ 基于服务上下游的思维，我把服务间依赖按以下维度进行耦合度分级：
+Level4: 领域知识互为上下游，业务可用性互为上下游
+Level3: 领域知识互为上下游, 业务可用性为单向上下游
+Level2: 领域知识为单向上下游，业务可用性互为上下游
+Level1: 领域知识为单向上下游，业务可用性为单向上下游
+
 9.1 【今日阅读】https://www.foonathan.net/2022/08/malloc-interface/ A good API requests all information it needs (duh) and returns as much information it can provide (law of useful return). malloc() and free() don’t follow those principles, which make them less useful as they could be.
 
 8.31 【今日阅读】https://msrc-blog.microsoft.com/2022/01/20/an_armful_of_cheris/ CHERI changes this. Every load or store instruction and every instruction fetch must be authorized by an architectural capability. Load and store instructions take a capability as the base instead of an integer address. The capability both identifies an address and grants access to a range of memory (including permissions, such as read, write, or execute).
