--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.4 【今日阅读】https://jvns.ca/blog/2022/08/30/a-way-to-categorize-debugging-skills/ I thought the categorization was a very useful structure for thinking about how to get better at debugging, so I’ve reframed the five categories in the paper into actions you can take to get better at debugging.
+
 9.3 【今日阅读】https://betterprogramming.pub/kubernetes-was-never-designed-for-batch-jobs-f59be376a338 Kubernetes is not a mere orchestration system. In fact, it eliminates the need for orchestration. The technical definition of orchestration is execution of a defined workflow: first do A, then B, then C. In contrast, Kubernetes comprises a set of independent, composable control processes that continuously drive the current state towards the provided desired state. It shouldn’t matter how you get from A to C. Centralized control is also not required. This results in a system that is easier to use and more powerful, robust, resilient, and extensible.
 
 9.2 【今日阅读】https://mp.weixin.qq.com/s/KaTdLkMT8ko2GE3ROuPuRQ 基于服务上下游的思维，我把服务间依赖按以下维度进行耦合度分级：
