--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.7 【今日阅读】https://www.youtube.com/watch?v=hkefPcWySzI roadmap of C++ module support in CMake and get an overview of the current set of features in CMake.
+
 9.6 【今日阅读】https://www.youtube.com/watch?v=f6kb5t7FU3g DIFUZZRTL: Differential Fuzz Testing to Find CPU Bugs
 
 9.5 【今日阅读】https://fuzzcheck.neocities.org/ Fuzzcheck’s goal is to be used as part of your development routine. You can quickly test small or complex function with it. It can find difficult corner-case bugs, minify complex test cases into easy-to-debug ones. It can find stack overflows and inputs that cause excessive computations or allocations.
