--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+9.11 【今日阅读】https://google.github.io/clusterfuzz/ As of May 2022, ClusterFuzz has found 25,000+ bugs in Google (e.g. Chrome) and 36,000+ bugs in over 550 open source projects integrated with OSS-Fuzz.
+
+9.10 【今日阅读】https://tiemoko.com/blog/diff-fuzz/ Beyond the Borrow Checker: Differential Fuzzing
+
 9.9 【今日阅读】https://api.csswg.org/bikeshed/?force=1&url=https://raw.githubusercontent.com/vector-of-bool/pitchfork/develop/data/spec.bs The phrase "it doesn’t matter, just be consistent" has really harmed the C++ community more than it has helped. "A foolish consistency," if you will. Developers' desire to keep their codebase unique and "special" has held back the development of tooling when every user insists that a tool support their own custom style. https://bpt.pizza/docs/design.html
 
 9.8 【今日阅读】https://www.youtube.com/watch?v=hkefPcWySzI roadmap of C++ module support in CMake and get an overview of the current set of features in CMake.
