--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.13 【今日阅读】https://neverworkintheory.org/2022/08/30/software-engineering-research-questions.html Software Engineering Research Questions
+
 9.12 【今日阅读】https://kevinmahoney.co.uk/articles/files-that-change-together/ the more likely files are to be edited together, the closer in the file system hierarchy they should be.
 
 9.11 【今日阅读】https://google.github.io/clusterfuzz/ As of May 2022, ClusterFuzz has found 25,000+ bugs in Google (e.g. Chrome) and 36,000+ bugs in over 550 open source projects integrated with OSS-Fuzz.
