--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.14 【今日阅读】https://earthly.dev/blog/bazel-build/ I’ve never worked at Google or anywhere using Bazel to drive their builds, and so while I can walk through a Bazel tutorial, I felt like I was missing the sense of what using Bazel was like, both the day-to-day and migrating to Bazel. So I interviewed 6 Bazel experts1 and asked them what they like about Bazel, when they would use it, and what to expect or consider before doing a Bazel migration.
+
 9.13 【今日阅读】https://neverworkintheory.org/2022/08/30/software-engineering-research-questions.html Software Engineering Research Questions
 
 9.12 【今日阅读】https://kevinmahoney.co.uk/articles/files-that-change-together/ the more likely files are to be edited together, the closer in the file system hierarchy they should be.
