--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.19 【今日阅读】https://docs.wasmtime.dev/examples-debugging.html debug WebAssembly with LLDB
+
 9.18 【今日阅读】https://github.com/xmake-io/xmake/tree/master/tests/projects/c%2B%2B/modules xmake c++ modules support
 
 9.17 【今日阅读】https://www.zhihu.com/question/19570229/answer/1626066191 阅读优秀项目的源代码是程序员自我提高的重要途经，因此好的工具能够帮助你事半功倍。就像 Lua 这样的开源项目，官方文档可能你花一天就看完了，但是源代码很多人一个月都看不明白，而 好的工具可以帮助你加速这个过程。
