--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.21 【今日阅读】https://mitchellh.com/zig/build-internals zig build written in zig https://nektro.github.io/zigmod/principles.html zigmod.yml is a static Yaml file that does not contain any Zig code. Placing packages’ definition in its own file (say as opposed to in build.zig) was an intentional decision from the start to not allow packages to run arbitrary code on the developer’s machine.
+
 9.20 【今日阅读】https://github.com/struct/isoalloc Its security strategy is originally inspired by Chrome's PartitionAlloc. A memory allocation isolation security strategy is best summed up as maintaining spatial separation, or isolation between objects of different sizes or types. While IsoAlloc wraps malloc and enforces naive isolation by default very strict isolation of allocations can be achieved using the APIs directly.
 
 9.19 【今日阅读】https://docs.wasmtime.dev/examples-debugging.html debug WebAssembly with LLDB
