--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,7 @@
+9.24 【今日阅读】https://zhuanlan.zhihu.com/p/567630362 获取 C++ WebAssembly 的 stacktrace
+
+9.23 【今日阅读】https://mp.weixin.qq.com/s/Xur4s28bmqGsxV7f4d2GZQ Remesh 介绍：用以开发大型复杂 Web App 的 DDD 框架
+
 9.22 【今日阅读】https://media.handmade-seattle.com/practical-data-oriented-design/ Andrew Kelley, creator of Zig, picks up where Mike Acton left off to teach us practical ways to apply data-oriented design.
 
 9.21 【今日阅读】https://mitchellh.com/zig/build-internals zig build written in zig https://nektro.github.io/zigmod/principles.html zigmod.yml is a static Yaml file that does not contain any Zig code. Placing packages’ definition in its own file (say as opposed to in build.zig) was an intentional decision from the start to not allow packages to run arbitrary code on the developer’s machine.
