--- a/今日阅读.md
+++ b/今日阅读.md
@@ -1,3 +1,5 @@
+9.25 【今日阅读】https://boyter.org/posts/expert-excuses-for-not-writing-unit-tests/  Expert Excuses for Not Writing Unit Tests
+
 9.24 【今日阅读】https://zhuanlan.zhihu.com/p/567630362 获取 C++ WebAssembly 的 stacktrace
 
 9.23 【今日阅读】https://mp.weixin.qq.com/s/Xur4s28bmqGsxV7f4d2GZQ Remesh 介绍：用以开发大型复杂 Web App 的 DDD 框架
